[package]
name = "goai"
version = "0.0.0"
edition = "2021"
authors = ["hzqd <hzqelf@yeah.net>"]
description = "A GUI for KataGo"
repository = "https://github.com/hzqd/CoGo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]